Added Table-specific Repo classes to query from and save to database (through the IDataAccess). Added interfaces.

--- a/TestingConsole/TestingConsole.csproj
+++ b/TestingConsole/TestingConsole.csproj
@@ -1,11 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DbAccess_Library.Contracts\DbAccess_Library.Contracts.csproj" />
     <ProjectReference Include="..\DbAccess_Library.Models\DbAccess_Library.Models.csproj" />
+    <ProjectReference Include="..\DbAccess_Library\DbAccess_Library.csproj" />
   </ItemGroup>
 
 </Project>
