--- a/MVCWeb/MVCWeb.csproj
+++ b/MVCWeb/MVCWeb.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\DbAccess_Library\DbAccess_Library.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+  </ItemGroup>
+
 </Project>
