Setup for deploying ASP.NET MVC web app to Azure.

--- a/MVCWeb/MVCWeb.csproj
+++ b/MVCWeb/MVCWeb.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>acc7fead-7add-47a2-875b-4ca6fefb5e5b</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
