--- a/BlazorServerWeb/BlazorServerWeb.csproj
+++ b/BlazorServerWeb/BlazorServerWeb.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>8e569b17-4c50-45b0-88c0-1363d9ead77a</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
